--- a/index.html
+++ b/index.html
@@ -60,24 +60,44 @@
         <div class="container">
           <ul class="list about-wrap">
             <li class="about-item">
+              <div class="about-item-icon">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#antenna"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Внимание к деталям</h3>
               <p class="about-text">
                 Идейные соображения, а также начало повседневной работы по формированию позиции.
               </p>
             </li>
             <li class="about-item">
+              <div class="about-item-icon">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#clock"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Пунктуальность</h3>
               <p class="about-text">
                 Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
               </p>
             </li>
             <li class="about-item">
+              <div class="about-item-icon">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#diagram"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Планирование</h3>
               <p class="about-text">
                 Равным образом консультация с широким активом в значительной степени обуславливает.
               </p>
             </li>
             <li class="about-item">
+              <div class="about-item-icon">
+                <svg class="about-icon" width="70" height="70">
+                  <use href="./images/icons.svg#astronaut"></use>
+                </svg>
+              </div>
               <h3 class="about-title">Современные технологии</h3>
               <p class="about-text">
                 Значимость этих проблем настолько очевидна, что реализация плановых заданий.
@@ -125,42 +145,173 @@
 
       <section class="section">
         <div class="container">
-        <h2 class="title team-title">Наша команда</h2>
-        <ul class="list team-list">
-          <li class="team-item">
-            <img
-              src="./images/our-team/img-1.jpg"
-              alt="Игорь Демьяненко"
-              width="270"
-              height="260"
-            />
-            <div class="team-item-content">
-              <h3 class="team-item-title">Игорь Демьяненко</h3>
-              <p class="team-item-text">Product Designer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <div class="team-item-content">
-              <h3 class="team-item-title">Ольга Репина</h3>
-              <p class="team-item-text">Frontend Developer</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img src="./images/our-team/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <div class="team-item-content">
-              <h3 class="team-item-title">Николай Тарасов</h3>
-              <p class="team-item-text">Marketing</p>
-            </div>
-          </li>
-          <li class="team-item">
-            <img src="./images/our-team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-             <div class="team-item-content">
-            <h3 class="team-item-title">Михаил Ермаков</h3>
-            <p class="team-item-text">UI Designer</p>
-          </li>
-        </ul>
-        </div>        
+          <h2 class="title team-title">Наша команда</h2>
+          <ul class="list team-list">
+            <li class="team-item">
+              <img
+                src="./images/our-team/img-1.jpg"
+                alt="Игорь Демьяненко"
+                width="270"
+                height="260"
+              />
+              <div class="team-item-content">
+                <h3 class="team-item-title">Игорь Демьяненко</h3>
+                <p class="team-item-text">Product Designer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img src="./images/our-team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
+              <div class="team-item-content">
+                <h3 class="team-item-title">Ольга Репина</h3>
+                <p class="team-item-text">Frontend Developer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/our-team/img-3.jpg"
+                alt="Николай Тарасов"
+                width="270"
+                height="260"
+              />
+              <div class="team-item-content">
+                <h3 class="team-item-title">Николай Тарасов</h3>
+                <p class="team-item-text">Marketing</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+            <li class="team-item">
+              <img
+                src="./images/our-team/img-4.jpg"
+                alt="Михаил Ермаков"
+                width="270"
+                height="260"
+              />
+              <div class="team-item-content">
+                <h3 class="team-item-title">Михаил Ермаков</h3>
+                <p class="team-item-text">UI Designer</p>
+                <ul class="team-social-list list">
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-social-item">
+                    <a href="" class="team-social-link">
+                      <svg class="team-icon" width="20" height="20">
+                        <use href="./images/icons.svg#linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
@@ -168,22 +319,24 @@
 
     <footer class="footer">
       <div class="container">
-      <a href="./index.html" class="link logo logo-footer"
-        ><span class="logo-color-first">Web</span>Studio</a
-      >
-      <ul class="list footer-list">
-        <li class="footer-item">
-          <a
-            href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
-            class="footer-map link"
-            >г. Киев, пр-т Леси Украинки, 26</a
-          >
-        </li>
-        <li class="footer-item">
-          <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
-        </li>
-        <li class="footer-item"><a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a></li>
-      </ul>
+        <a href="./index.html" class="link logo logo-footer"
+          ><span class="logo-color-first">Web</span>Studio</a
+        >
+        <ul class="list footer-list">
+          <li class="footer-item">
+            <a
+              href="https://www.google.com/maps/place/%D0%B1%D1%83%D0%BB.+%D0%9B%D0%B5%D1%81%D0%B8+%D0%A3%D0%BA%D1%80%D0%B0%D0%B8%D0%BD%D0%BA%D0%B8,+26,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4265807,30.5361971,17z/data=!3m1!4b1!4m5!3m4!1s0x40d4cf0e033ecbe9:0x57a4dffefec77da0!8m2!3d50.4265807!4d30.5383858"
+              class="footer-map link"
+              >г. Киев, пр-т Леси Украинки, 26</a
+            >
+          </li>
+          <li class="footer-item">
+            <a href="mailto:info@devstudio.com" class="footer-contacts link">info@devstudio.com</a>
+          </li>
+          <li class="footer-item">
+            <a href="tel:+380961111111" class="footer-contacts link">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </body>
