--- a/index.html
+++ b/index.html
@@ -35,11 +35,19 @@
         <ul class="header-list list">
           <li class="contacts">
             <a href="mailto:info@devstudio.com" class="header-link-contacts link"
-              >info@devstudio.com</a
-            >
+              ><svg class="header-icon" width="16" height="12">
+                <use href="./images/icons.svg#envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="contacts">
-            <a href="tel:+380961111111" class="header-link-contacts link">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="header-link-contacts link">
+              <svg class="header-icon" width="10" height="16">
+                <use href="./images/icons.svg#smartphone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -62,7 +70,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="./images/icons.svg#antenna"></use>
+                  <use href="../images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="about-title">Внимание к деталям</h3>
@@ -73,7 +81,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="./images/icons.svg#clock"></use>
+                  <use href="../images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="about-title">Пунктуальность</h3>
@@ -84,7 +92,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="./images/icons.svg#diagram"></use>
+                  <use href="../images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="about-title">Планирование</h3>
@@ -95,7 +103,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="./images/icons.svg#astronaut"></use>
+                  <use href="../images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="about-title">Современные технологии</h3>
