--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="../images/icons.svg#antenna"></use>
+                  <use href="./images/icons.svg#antenna"></use>
                 </svg>
               </div>
               <h3 class="about-title">Внимание к деталям</h3>
@@ -81,7 +81,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="../images/icons.svg#clock"></use>
+                  <use href="./images/icons.svg#clock"></use>
                 </svg>
               </div>
               <h3 class="about-title">Пунктуальность</h3>
@@ -92,7 +92,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="../images/icons.svg#diagram"></use>
+                  <use href="./images/icons.svg#diagram"></use>
                 </svg>
               </div>
               <h3 class="about-title">Планирование</h3>
@@ -103,7 +103,7 @@
             <li class="about-item">
               <div class="about-item-icon">
                 <svg class="about-icon" width="70" height="70">
-                  <use href="../images/icons.svg#astronaut"></use>
+                  <use href="./images/icons.svg#astronaut"></use>
                 </svg>
               </div>
               <h3 class="about-title">Современные технологии</h3>
@@ -330,42 +330,42 @@
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-1"></use>
+                  <use href="./images/icons.svg#clients-logo-1"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-2"></use>
+                  <use href="./images/icons.svg#clients-logo-2"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-3"></use>
+                  <use href="./images/icons.svg#clients-logo-3"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-4"></use>
+                  <use href="./images/icons.svg#clients-logo-4"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-5"></use>
+                  <use href="./images/icons.svg#clients-logo-5"></use>
                 </svg>
               </a>
             </li>
             <li class="clients-item">
               <a href="" class="clients-link link">
                 <svg class="clients-icon" width="106" height="60">
-                  <use href="/images/icons.svg#clients-logo-6"></use>
+                  <use href="./images/icons.svg#clients-logo-6"></use>
                 </svg>
               </a>
             </li>
