--- a/index.html
+++ b/index.html
@@ -248,28 +248,28 @@
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -290,28 +290,28 @@
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#instagram"></use>
+                        <use href="./images/icons.svg#instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#twitter"></use>
+                        <use href="./images/icons.svg#twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#facebook"></use>
+                        <use href="./images/icons.svg#facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="team-social-item">
                     <a href="" class="team-social-link">
                       <svg class="team-icon" width="20" height="20">
-                        <use href="../images/icons.svg#linkedin"></use>
+                        <use href="./images/icons.svg#linkedin"></use>
                       </svg>
                     </a>
                   </li>
