--- a/portfolio.html
+++ b/portfolio.html
@@ -76,8 +76,21 @@
           </ul>
           <ul class="list portfolio-list">
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
-                <img src="./images/portfolios/laptop1.jpg" alt="laptop1" width="370" height="294" />
+              <a href="" class="link">
+                <div class="portfolio-wrap">
+                  <img
+                    class="portfolio-img"
+                    src="./images/portfolios/laptop1.jpg"
+                    alt="laptop1"
+                    width="370"
+                    height="294"
+                  />
+                  <p class="portfolio-wrap-text">
+                    Технокряк это современная площадка распространения коронавируса. Компании
+                    используют эту платформу для цифрового шпионажа и атак на защищённые сервера
+                    конкурентов.
+                  </p>
+                </div>
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Технокряк</h3>
                   <p class="portfolio-text">Веб-сайт</p>
@@ -85,7 +98,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img src="./images/portfolios/poster.jpg" alt="poster" width="370" height="294" />
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">
@@ -96,7 +109,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img
                   src="./images/portfolios/restaurant.jpg"
                   alt="restaurant"
@@ -110,7 +123,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img
                   src="./images/portfolios/headphones.jpg"
                   alt="headphones"
@@ -124,7 +137,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img src="./images/portfolios/boxes.jpg" alt="boxes" width="370" height="294" />
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Проект <span lang="en">Boxes</span></h3>
@@ -133,7 +146,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img
                   src="./images/portfolios/inspiration.jpg"
                   alt="inspiration"
@@ -147,7 +160,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img src="./images/portfolios/book.jpg" alt="book" width="370" height="294" />
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title">Издание <span lang="en"></span>Limited Edition</h3>
@@ -156,7 +169,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img
                   src="./images/portfolios/lab.jpg"
                   alt="prodject-lab"
@@ -170,7 +183,7 @@
               </a>
             </li>
             <li class="portfolio-item">
-              <a href="" class="porfolio-link link">
+              <a href="" class="link">
                 <img src="./images/portfolios/laptop2.jpg" alt="laptop2" width="370" height="294" />
                 <div class="portfolio-item-content">
                   <h3 class="portfolio-title"><span lang="en">Growing Business</span></h3>
