--- a/index.html
+++ b/index.html
@@ -438,6 +438,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <h2 class="footer-title">Подпишитесь на рассылку</h2>
+          <label for="user_email"></label>
+          <div class="footer-input-wrap">
+            <input
+              type="email"
+              name="email"
+              placeholder="E-mail"
+              id="user_email"
+              class="footer-input"
+            />
+            <button type="submit" class="footer__subscribe-btn">
+              Подписаться
+              <svg class="footer-btn-icon" width="24" height="24">
+                <use href="./images/icons.svg#send"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
